--- a/views/show.ejs
+++ b/views/show.ejs
@@ -7,8 +7,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
-    <div class="main w-full min-h-screen bg-zinc-900 p-10 text-white">
-        <a class="text-blue-520 inline-block mb-12" href="/">Go back to Home</a>
+    <div class="main w-full min-h-screen bg-zinc-850 p-12 text-white">
+        <a class="text-blue-500 inline-block mb-12" href="/">Go back to Home.</a>
         <h1 class="text-4xl tracking-tighter"><%= filename %></h1>
       <p class="text-xl mt-2"><%= filedata %></p>
     </div>
